とりあえず表示まで

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title></title>
 </head>
 <body>
-	
-<script type="text/javascript" src="test.js"></script>
+	<!--<canvas id="sample" width="300" height="300"></canvas>-->
+<!--<script type="text/javascript" src="test.js"></script>-->
+<script type="text/javascript" src="lib/enchant.js/enchant.js"></script>
+<script type="text/javascript" src="game.js"></script>
 </body>
 </html>
